Added build configs for Kage w/o Silhouette micro

--- a/microbenchmarks/demos/st/stm32l475_discovery/ac6/.gitignore
+++ b/microbenchmarks/demos/st/stm32l475_discovery/ac6/.gitignore
@@ -11,3 +11,8 @@
 # Ignore run configurations except one
 *.cfg
 !STM32L475VG.cfg
+/kage-no-silhouette-context-switch/
+/kage-no-silhouette-exception-dispatcher/
+/kage-no-silhouette-queue/
+/kage-no-silhouette-stream-buffer/
+/kage-no-silhouette-secure-api/
